tests/ft/type_checking/invalid/block.jk
mut a = false;

a = {
    15
}
